[package]
description = "API for the Gelbooru image board"
documentation = "https://docs.rs/gelbooru_api"
edition = "2021"
license = "MPL-2.0"
name = "gelbooru-api"
readme = "README.md"
repository = "https://github.com/mibmo/gelbooru-api"
version = "0.3.4"

[dependencies]
chrono = "0.4"
http = "0.2"
hyper = "0.14"
hyper-rustls = "0.23"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
tokio = {version = "1.8.1", features = ["rt", "macros"]}
